Accesible button names

--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,11 @@
             <input id="set-display" inputmode="numeric">
             <span class="label-text">times</span>
         </label>
-        <button>
+        <button name="state-toggle">
             <svg id="state-toggle" class="button-icon">
                 <use href="#play" />
             </svg>
-        </button>
+        </button name="reset-button">
         <button id="reset-button" class="hidden">
             <svg class="button-icon">
                 <use href="#stop" />
