--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
             <svg id="state-toggle" class="button-icon">
                 <use href="#play" />
             </svg>
-        </button name="reset-button">
-        <button id="reset-button" class="hidden">
+        </button>
+        <button id="reset-button" name="reset-button" class="hidden">
             <svg class="button-icon">
                 <use href="#stop" />
             </svg>
