Accesible labels pt. 2

--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,12 @@
             <input id="set-display" inputmode="numeric">
             <span class="label-text">times</span>
         </label>
-        <button name="state-toggle">
+        <button aria-label="state-toggle">
             <svg id="state-toggle" class="button-icon">
                 <use href="#play" />
             </svg>
         </button>
-        <button id="reset-button" name="reset-button" class="hidden">
+        <button id="reset-button" aria-label="reset-button" class="hidden">
             <svg class="button-icon">
                 <use href="#stop" />
             </svg>
