--- a/src/index.html
+++ b/src/index.html
@@ -54,9 +54,9 @@
             <symbol id="stop" viewBox="0 0 100 100">
                 <rect x="0" y="0" width="100" height="100" />
             </symbol>
-            <linearGradient id="button-sheen" gradientTransform="rotate(40)">
-                <stop offset="5%" stop-color="#F5F5F5" />
-                <stop offset="95%" stop-color="#C0C0C0" />
+            <linearGradient id="button-sheen" gradientTransform="rotate(64)">
+                <stop offset="10%" stop-color="#F5F5F5" />
+                <stop offset="80%" stop-color="#888" />
             </linearGradient>
         </defs>
     </svg>
