--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A simple fitness timer pwa">
     <meta name="theme-color" content="#F5F5F5">
-    <link rel="icon" type="image/png" href="./images/icons-192.png">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" type="image/png" href="/images/icons-192.png">
     <link rel="manifest" href="./manifest.json">
-    <script type="module" src="./main.js"></script>
+    <link rel="stylesheet" href="./src/style.css">
+    <script type="module" src="./src/main.js"></script>
 </head>
 
 <body>
