Change keyboard layout for input fields

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         </svg>
         <label class="duration-display">
             <span class="label-text phase-label">Hussle</span>
-            <input id="main-display" inputmode="numeric">
+            <input id="main-display" pattern="[0-9]*" type="number">
         </label>
         <label class="duration-display">
             <span class="label-text phase-label">Chill</span>
-            <input id="sub-display" inputmode="numeric">
+            <input id="sub-display" pattern="[0-9]*" type="number">
         </label>
         <label>
-            <input id="set-display" inputmode="numeric">
+            <input id="set-display" pattern="[0-9]*" type="number">
             <span class="label-text">times</span>
         </label>
         <button aria-label="state-toggle">
