Prevent inputs while timer is running

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             <path d="M5 95A7 8 0 0 1 95 95" />
             <path d="M5 95A7 8 0 0 1 95 95" />
         </svg>
-        <label class="duration-display">
+        <label class="duration-display input-field">
             <span class="label-text phase-label">Hussle</span>
             <input id="main-display" pattern="\d*" type="tel">
         </label>
-        <label class="duration-display">
+        <label class="duration-display input-field">
             <span class="label-text phase-label">Chill</span>
             <input id="sub-display" pattern="\d*" type="tel">
         </label>
-        <label>
+        <label class="input-field">
             <input id="set-display" pattern="\d*" type="tel">
             <span class="label-text">times</span>
         </label>
